--- a/taller1sd/nbproject/project.properties
+++ b/taller1sd/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.json-20180813.jar=../lib/json-20180813.jar
+file.reference.json-20180813.jar-1=dist\\lib\\json-20180813.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20180813.jar}
+    ${file.reference.json-20180813.jar}:\
+    ${file.reference.json-20180813.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
