--- a/taller1sd/nbproject/private/configs/cliente.properties
+++ b/taller1sd/nbproject/private/configs/cliente.properties
@@ -1,1 +1,1 @@
-application.args=client 192.168.43.4 9000 regparticipantegrp19000192.168.43.4
+application.args=client 192.168.43.162 9010 regtienda-AAA-9010-192.168.43.162
