--- a/taller1sd/nbproject/private/private.properties
+++ b/taller1sd/nbproject/private/private.properties
@@ -2,7 +2,7 @@ application.args=client 9000 Francisco
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.json-20180813.jar=C:\\Users\\Fabian Graterol\\Desktop\\universidad\\9no semestre\\distribuidas\\proyecto 1\\SD2\\taller1sd\\dist\\lib\\json-20180813.jar
+file.reference.json-20180813.jar=C:\\Users\\joflores\\Desktop\\oyecto\\lib\\json-20180813.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Fabian Graterol\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\joflores\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
