--- a/taller1sd/nbproject/project.properties
+++ b/taller1sd/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.jar=${dist.dir}/taller1sd.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.6.2.jar=C:\\Users\\joflores\\Desktop\\oyecto\\lib\\gson-2.6.2.jar
 file.reference.json-20180813.jar=../lib/json-20180813.jar
 file.reference.json-20180813.jar-1=dist\\lib\\json-20180813.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-20180813.jar}:\
-    ${file.reference.json-20180813.jar-1}
+    ${file.reference.json-20180813.jar-1}:\
+    ${file.reference.gson-2.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
