--- a/taller1sd/nbproject/private/configs/cliente.properties
+++ b/taller1sd/nbproject/private/configs/cliente.properties
@@ -1,1 +1,1 @@
-application.args=client 192.168.91.191 9010 regtienda-AAA-9010-192.168.91.54
+application.args=client 192.168.91.191 9010 regtienda-tienda1-9010-192.168.91.191
