--- a/taller1sd/nbproject/project.properties
+++ b/taller1sd/nbproject/project.properties
@@ -41,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.json-20180813.jar}:\
     ${file.reference.json-20180813.jar-1}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.gson-2.6.2.jar}
     ${file.reference.gson-2.6.2.jar}:\
     ${file.reference.gson-2.6.2.jar-1}
 =======
